--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -430,6 +430,8 @@ section.counter__section > div h5 {
 section.work .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
+  grid-gap: 40px;
 }
 
 section.work .wrapper .portfolio .tabs ul {
@@ -469,4 +471,44 @@ section.work .wrapper .portfolio .portfolio__wrapper a img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+section.work .wrapper .slider__wrapper .icon__wrap {
+  color: var(--info);
+  font-size: 26px;
+  text-align: center;
+}
+
+section.work .wrapper .slider__wrapper .slider .slide p {
+  color: var(--ternary);
+  line-height: 1.6;
+  text-align: center;
+  margin-bottom: 1rem;
+  padding-top: 2rem;
+}
+
+section.work .wrapper .slider__wrapper .slider .slide img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+section.work .wrapper .slider__wrapper .slider .slide h2 {
+  font-size: 16px;
+  color: var(--info);
+  margin-top: 1rem;
+}
+section.work .wrapper .slider__wrapper .slider .slide h6 {
+  color: var(--ternary);
+  margin-top: 1rem;
+}
+
+section.work .wrapper .slider__wrapper .slider .slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section.work .wrapper .slider__wrapper {
+  overflow: hidden;
 }
